# graph_algorithm_engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json
.agent/: graph_engine_prompt.md  graph_engine_spec.md
.agent/sessions/: s01_setup.md  s02_graph_class.md  s03_bfs.md  s04_dfs.md  s05_dijkstra.md  s06_astar_bellmanford.md  s07_kruskal_tarjan_topo.md  s08_utils_tests_benchmark.md
benchmarks/: benchmark.cpp
data/: road_network_sample.csv  sample_graph.csv
docs/: README.md
docs/01_foundations/: 01_Graph_Class.md  02_Graph_Advanced_Concepts.md  03_CPP_Syntax_Reference.md
docs/02_algorithms/: 01_BFS_DFS.md  02_Dijkstra.md  03_AStar.md  04_BellmanFord.md  05_Kruskal_MST.md  06_TarjanSCC.md  07_TopologicalSort.md
docs/03_project_files/: 01_Main.md  02_Benchmark.md  03_Tests.md  04_Utils.md  05_CMake_And_Data.md
docs/04_reference/: Algorithm_Cheat_Sheet.md  Interview_QandA.md  Visual_Walkthroughs.md
docs/05_visualizer/: 00_Navigation.md  02_StyleCSS.md  03_GraphJS.md
docs/05_visualizer/d3js/: 00_Prerequisite_JavaScript_and_SVG.md  (+10 more)
docs/06_cpp_concepts/: 01_IO_Manipulators.md
include/: Graph.hpp
include/algorithms/: AStar.hpp  BFS.hpp  BellmanFord.hpp  DFS.hpp  Dijkstra.hpp  Kruskal.hpp  TarjanSCC.hpp  TopologicalSort.hpp
include/utils/: GraphExporter.hpp  GraphLoader.hpp  Timer.hpp
src/: main.cpp
tests/: CMakeLists.txt  test_astar.cpp  test_bfs_dfs.cpp  test_dijkstra.cpp  test_graph.cpp  test_mst.cpp  test_scc.cpp
visualizer/: astar_path.json  bfs_steps.json  graph.js  graph.json  index.html  kruskal_mst.json  style.css  tarjan_sccs.json
(+15 files in other folders)
